2012-09-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Better check for DJGPP. DJGPP 2.04 returns "FreeDOS"
	  on Freedos, 2.03 returns always MS-DOS. Thanks to Rugxulo.
	* man/man1/dos2unix.pod: Fixed a typo. Thanks to Jari Aalto.

2012-09-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.2

2012-08-29 Erwin Waterlander <waterlan@xs4all.nl>
	* wcc*: Fix target 'dist' in Watcom makefiles.
	* djgpp.mak: Use 8.3 filename for dos32 binary package.

2012-08-26 Erwin Waterlander <waterlan@xs4all.nl>
	* os2.mak: Renamed to emx.mak.
	* wccos2.mak: New Watcom C makefile for OS/2 target.
	* wcc.mif: Watcom C makefile with generic parts. This new
	  makefile containts new targets 'install', 'uninstall',
	  'doc', 'dist', and 'mostlyclean'.
	* djgpp.mak: Default prefix is now c:\dos32
	* dos16_gnu.mak: Removed. Installation of dos16 version is
	  now done with Watcom makefiles.

2012-08-13 Erwin Waterlander <waterlan@xs4all.nl>
	* po/de.po: Update German translations. Thanks to Philipp.
	* po/es.po: Update Spanish translations. Thanks to Julio.

2012-08-12 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Don't use pod2text option --utf8. There are too many
	  old pod2text versions around that don't support this option.
	* Makefile: Install PDF and PostScript files of all languages when
	  they have been created.
	* po/eo*.po: Update Esperanto translations. Thanks to Rugxulo.
	* dos2unix/unix2dos: Don't use __MSDOS__ macro for Windows.

2012-08-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Change variable OS to D2U_OS. OS is used by Windows.
	* Makefile: By default install only English text and html manuals.
	  This saves a dependency on iconv. Non-English text and html manuals
	  will be installed when they have been explicitly generated with
	  targets 'txt' and 'html'.

2012-08-09 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Use only C99 compliant predefined macros.

2012-08-07 Erwin Waterlander <waterlan@xs4all.nl>