@@ -1,4 +1,4 @@
 DOS2UNIX_VERSION = 6.0.3-beta1
 DOS2UNIX_VERSION_SHORT = 603b1
-DOS2UNIX_DATE = 2012-09-15
+DOS2UNIX_DATE = 2012-09-16
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
